fixed overlapping text in home

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -116,7 +116,6 @@
       rgba(247, 247, 247, 0.9)
       ), url(/assets/img/colored-ink.jpg);
   background-size: cover;
-  max-height: 600px;
 }
 .bio {
   h2 {
